--- a/sample.html
+++ b/sample.html
@@ -14,35 +14,35 @@
 			<div id="header" class="header">
 				<div class="header_content">
 					<div class="mob_sub_menu_icon">
-						<a class="link" href="http://www.google.com"><img src="images/menu_icon_1.png"></a>
+						<a class="link" href="#"><img src="images/menu_icon_1.png"></a>
 						<div class="sub_menu_dropdown">
 							Sub Menu Dropdown<br/><br/><br/>
 						</div>
 					</div>
 					<div class="header_logo_container">
-						<a href="http://www.google.com"><img src="images/company_logo.jpg"></a>
+						<a href="#"><img src="images/company_logo.jpg"></a>
 					</div>
 					<div class="header_account_container">
 						<ul class="nav">
 							<li class="notification">
-								<a class="link notification_link" href="http://www.google.com"><img src="images/alert_icon.png"><span>8</span></a>
+								<a class="link notification_link" href="#"><img src="images/alert_icon.png"><span>8</span></a>
 								<div class="notification_dropdown">
 									Notification Dropdown<br/><br/><br/>
 								</div>
-								<a class="link messages_link" href="http://www.google.com"><img src="images/message_icon.png"><span>18</span></a>
+								<a class="link messages_link" href="#"><img src="images/message_icon.png"><span>18</span></a>
 								<div class="messages_dropdown">
 									Messages Dropdown<br/><br/><br/>
 								</div>
 							</li>
 							<li class="user_account_menu_icon">
-								<a class="link desktop_link" href="http://www.google.com">Arindam Roy&nbsp;<img src="images/up_down_arrow.png"></a>
-								<a class="link mobile_link" href="http://www.google.com"><img src="images/user_account_icon.png"></a>
+								<a class="link desktop_link" href="#">Arindam Roy&nbsp;<img src="images/up_down_arrow.png"></a>
+								<a class="link mobile_link" href="#"><img src="images/user_account_icon.png"></a>
 								<div class="user_account_dropdown">
 									User Account Dropdown<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 								</div>
 							</li>
 							<li class="mob_main_menu_icon">
-								<a class="link" href="http://www.google.com"><img src="images/menu_icon_1.png"></a>
+								<a class="link" href="#"><img src="images/menu_icon_1.png"></a>
 								<div class="main_menu_mobile_dropdown">
 									Main Responsive Menu Dropdown<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 								</div>
@@ -63,51 +63,51 @@
 					<div class="footer_col">
 						<ul>
 							<li class="header">Support</li>
-							<li><a href="http://www.google.com">Help Center</a></li>
-							<li><a href="http://www.google.com">Get Started</a></li>
-							<li><a href="http://www.google.com">Privacy &amp;Terms</a></li>
-							<li><a href="http://www.google.com">Copyright</a></li>
-							<li><a href="http://www.google.com">Contact us</a></li>
+							<li><a href="#">Help Center</a></li>
+							<li><a href="#">Get Started</a></li>
+							<li><a href="#">Privacy &amp;Terms</a></li>
+							<li><a href="#">Copyright</a></li>
+							<li><a href="#">Contact us</a></li>
 						</ul>
 					</div>
 					<div class="footer_col">
 						<ul>
 							<li class="header">Support</li>
-							<li><a href="http://www.google.com">Help Center</a></li>
-							<li><a href="http://www.google.com">Get Started</a></li>
-							<li><a href="http://www.google.com">Privacy &amp;Terms</a></li>
-							<li><a href="http://www.google.com">Copyright</a></li>
-							<li><a href="http://www.google.com">Contact us</a></li>
+							<li><a href="#">Help Center</a></li>
+							<li><a href="#">Get Started</a></li>
+							<li><a href="#">Privacy &amp;Terms</a></li>
+							<li><a href="#">Copyright</a></li>
+							<li><a href="#">Contact us</a></li>
 						</ul>
 					</div>
 					<div class="footer_col">
 						<ul>
 							<li class="header">Support</li>
-							<li><a href="http://www.google.com">Help Center</a></li>
-							<li><a href="http://www.google.com">Get Started</a></li>
-							<li><a href="http://www.google.com">Privacy &amp;Terms</a></li>
-							<li><a href="http://www.google.com">Copyright</a></li>
-							<li><a href="http://www.google.com">Contact us</a></li>
+							<li><a href="#">Help Center</a></li>
+							<li><a href="#">Get Started</a></li>
+							<li><a href="#">Privacy &amp;Terms</a></li>
+							<li><a href="#">Copyright</a></li>
+							<li><a href="#">Contact us</a></li>
 						</ul>
 					</div>
 					<div class="footer_col">
 						<ul>
 							<li class="header">Support</li>
-							<li><a href="http://www.google.com">Help Center</a></li>
-							<li><a href="http://www.google.com">Get Started</a></li>
-							<li><a href="http://www.google.com">Privacy &amp;Terms</a></li>
-							<li><a href="http://www.google.com">Copyright</a></li>
-							<li><a href="http://www.google.com">Contact us</a></li>
+							<li><a href="#">Help Center</a></li>
+							<li><a href="#">Get Started</a></li>
+							<li><a href="#">Privacy &amp;Terms</a></li>
+							<li><a href="#">Copyright</a></li>
+							<li><a href="#">Contact us</a></li>
 						</ul>
 					</div>
 					<div class="footer_col">
 						<ul>
 							<li class="header">Support</li>
-							<li><a href="http://www.google.com">Help Center</a></li>
-							<li><a href="http://www.google.com">Get Started</a></li>
-							<li><a href="http://www.google.com">Privacy &amp;Terms</a></li>
-							<li><a href="http://www.google.com">Copyright</a></li>
-							<li><a href="http://www.google.com">Contact us</a></li>
+							<li><a href="#">Help Center</a></li>
+							<li><a href="#">Get Started</a></li>
+							<li><a href="#">Privacy &amp;Terms</a></li>
+							<li><a href="#">Copyright</a></li>
+							<li><a href="#">Contact us</a></li>
 						</ul>
 					</div>
 				</div>
