--- a/sample.html
+++ b/sample.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<!--stylesheet-->
 	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<script type="text/javascript" src="js/JS.js"></script>
 	<script type="text/javascript" src="js/Webapp.Layout.js"></script>
 	<title></title>
 <head>
