--- a/default.html
+++ b/default.html
@@ -5,9 +5,11 @@
 	to prevent the iPhone from automatically scaling the website to fit its screen-->
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<!--stylesheet-->
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<script type="text/javascript" src="js/JS.js"></script>
-	<script type="text/javascript" src="js/Webapp.Layout.js"></script>
+	<!--<link rel="stylesheet" type="text/css" href="css/base.css">-->
+	<link rel="stylesheet" type="text/css" href="css/minifiedCSS.css">
+	<!--<script type="text/javascript" src="js/JS.js"></script>
+	<script type="text/javascript" src="js/Webapp.Layout.js"></script>-->
+	<script type="text/javascript" src="js/minifiedJS.js"></script>
 	<title></title>
 <head>
 	<body>
