--- a/default.html
+++ b/default.html
@@ -5,8 +5,8 @@
 	to prevent the iPhone from automatically scaling the website to fit its screen-->
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<!--stylesheet-->
-	<!--<link rel="stylesheet" type="text/css" href="css/base.css">-->
-	<link rel="stylesheet" type="text/css" href="css/minifiedCSS.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<!--<link rel="stylesheet" type="text/css" href="css/minifiedCSS.css">-->
 	<!--<script type="text/javascript" src="js/JS.js"></script>
 	<script type="text/javascript" src="js/Webapp.Layout.js"></script>-->
 	<script type="text/javascript" src="js/minifiedJS.js"></script>
@@ -19,7 +19,15 @@
 					<div class="mob_sub_menu_icon">
 						<a class="link" href="#"><img src="images/menu_icon_1.png"></a>
 						<div class="sub_menu_dropdown">
-							Sub Menu Dropdown<br/><br/><br/>
+							<ul>
+								<li>Back</li>
+								<li>Menu Item 1</li>
+								<li>Menu Item 2</li>
+								<li>Menu Item 3</li>
+								<li>Menu Item 4</li>
+								<li>Menu Item 5</li>
+								<li>Menu Item 6</li>
+							<ul>
 						</div>
 					</div>
 					<div class="header_logo_container">
@@ -30,24 +38,40 @@
 							<li class="notification">
 								<a class="link notification_link" href="#"><img src="images/alert_icon.png"><span>8</span></a>
 								<div class="notification_dropdown">
-									Notification Dropdown<br/><br/><br/>
+									<div>You have 8 new user request(s)</div>
+									<div>You have 17 transaction(s) to verify</div>
 								</div>
 								<a class="link messages_link" href="#"><img src="images/message_icon.png"><span>18</span></a>
 								<div class="messages_dropdown">
-									Messages Dropdown<br/><br/><br/>
+									<div>You have 18 unread message(s)</div>
+									<div>You can 6 urgent message(s)</div>
 								</div>
 							</li>
 							<li class="user_account_menu_icon">
 								<a class="link desktop_link" href="#">Arindam Roy&nbsp;<img src="images/up_down_arrow.png"></a>
 								<a class="link mobile_link" href="#"><img src="images/user_account_icon.png"></a>
 								<div class="user_account_dropdown">
-									User Account Dropdown<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+									<div>Account Settings</div>
+									<div>Login Statistics</div>
+									<div>Change Password</div>
+									<div class="logout">Logout</div>
 								</div>
 							</li>
 							<li class="mob_main_menu_icon">
 								<a class="link" href="#"><img src="images/menu_icon_1.png"></a>
 								<div class="main_menu_mobile_dropdown">
-									Main Responsive Menu Dropdown<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+									<ul>
+										<li>Back</li>
+										<li>Menu Item 1</li>
+										<li>Menu Item 2</li>
+										<li>Menu Item 3</li>
+										<li>Menu Item 4</li>
+										<li>Menu Item 5</li>
+										<li>Menu Item 6</li>
+										<li>Menu Item 7</li>
+										<li>Menu Item 8</li>
+										<li>Menu Item 9</li>
+									<ul>
 								</div>
 							</li>
 						</ul>
