--- a/default.html
+++ b/default.html
@@ -5,8 +5,8 @@
 	to prevent the iPhone from automatically scaling the website to fit its screen-->
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<!--stylesheet-->
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<!--<link rel="stylesheet" type="text/css" href="css/minifiedCSS.css">-->
+	<!--<link rel="stylesheet" type="text/css" href="css/base.css">-->
+	<link rel="stylesheet" type="text/css" href="css/minifiedCSS.css">
 	<!--<script type="text/javascript" src="js/JS.js"></script>
 	<script type="text/javascript" src="js/Webapp.Layout.js"></script>-->
 	<script type="text/javascript" src="js/minifiedJS.js"></script>
@@ -20,9 +20,9 @@
 						<a class="link" href="#"><img src="images/menu_icon_1.png"></a>
 						<div class="sub_menu_dropdown">
 							<ul>
-								<li class="back"><a>Back</a></li>
+								<li class="back"><a><img class="back" src="images/black_arrow_small_left.png">Back</a></li>
 								<li>
-									<a>Menu Item 1</a>
+									<a>Menu Item 1<img class="hasChild" src="images/black_arrow_small_right.png"></a>
 									<ul>
 										<li><a>Sub Menu Item 1</a></li>
 										<li><a>Sub Menu Item 2</a></li>
@@ -70,9 +70,9 @@
 								<a class="link" href="#"><img src="images/menu_icon_1.png"></a>
 								<div class="main_menu_mobile_dropdown">
 									<ul>
-										<li class="back"><a>Back</a></li>
+										<li class="back"><a><img class="back" src="images/black_arrow_small_left.png">Back</a></li>
 										<li>
-											<a>Menu Item 1</a>
+											<a>Menu Item 1<img class="hasChild" src="images/black_arrow_small_right.png"></a>
 											<ul>
 												<li><a>Sub Menu Item 1</a></li>
 												<li><a>Sub Menu Item 2</a></li>
